Use term "candidate key" instead of "password"

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "gen-jwt": "ts-node-dev jwtGenerator.ts",
-    "gen-passwords": "ts-node-dev passwordGenerator.ts",
+    "gen-candidate-keys": "ts-node-dev candidateKeysGenerator.ts",
     "crack": "ts-node-dev crack.ts",
     "better-crack": "ts-node-dev better_crack.ts"
   },
